# news-driven-investing

./: .env.dist  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
dagster/: Dockerfile  dagster.yaml  workspace.yaml
jupyter/: Dockerfile
mlflow/: Dockerfile
news_driven_investing/: __init__.py  definitions.py  io.py  preprocessing.py  resources.py
news_driven_investing/assets/: stock_prices.py  youtube_transcript.py
news_driven_investing/config/: settings.py
news_driven_investing/utils/: alpha_vantage.py  misc.py  youtube.py
notebooks/ingest/: alpha-vantage-api.ipynb  find-youtube-channels.ipynb  test-transcript-assets.ipynb  youtube-connect.ipynb  youtube-transcript.ipynb
notebooks/training/: predict-channel.ipynb  predict-price-change.ipynb  preprocess_data.ipynb
notebooks/training/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/training/catboost_info/learn/: events.out.tfevents
notebooks/training/catboost_info/test/: events.out.tfevents
serving/: Dockerfile  serve-model.sh
